// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReducedLeaveSchedule shows text about matching the certification when claim is for Care for a Family Member leave 1`] = `
<div
  class="usa-alert__text"
>
  You will need a completed 
  <a
    href="https://www.mass.gov/family-caring-form"
    rel="noopener"
    target="_blank"
  >
    Certification of Your Family Member’s Serious Health Condition
  </a>
   for this section.
</div>
`;

exports[`ReducedLeaveSchedule shows text about matching the certification when claim is for Care for a Family Member leave 2`] = `
<p
  class="usa-intro"
>
  The total number of hours you enter must match the reduced leave schedule section in the Certification of Your Family Member’s Serious Health Condition.
</p>
`;

exports[`ReducedLeaveSchedule shows text about matching the certification when claim is for Pregnancy/Maternity leave 1`] = `
<div
  class="usa-alert__text"
>
  You will need a completed 
  <a
    href="https://www.mass.gov/medical-leave-form"
    rel="noopener"
    target="_blank"
  >
    Certification of Your Serious Health Condition
  </a>
   for this section.
</div>
`;

exports[`ReducedLeaveSchedule shows text about matching the certification when claim is for Pregnancy/Maternity leave 2`] = `
<p
  class="usa-intro"
>
  The total number of hours you enter must match the reduced leave schedule section in the Certification of Your Serious Health Condition.
</p>
`;

exports[`ReducedLeaveSchedule shows text about matching the certification when claim is for Serious Health Condition - Employee leave 1`] = `
<div
  class="usa-alert__text"
>
  You will need a completed 
  <a
    href="https://www.mass.gov/medical-leave-form"
    rel="noopener"
    target="_blank"
  >
    Certification of Your Serious Health Condition
  </a>
   for this section.
</div>
`;

exports[`ReducedLeaveSchedule shows text about matching the certification when claim is for Serious Health Condition - Employee leave 2`] = `
<p
  class="usa-intro"
>
  The total number of hours you enter must match the reduced leave schedule section in the Certification of Your Serious Health Condition.
</p>
`;
